solving white space issue

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -66,6 +66,10 @@
   }
 }
 
+.footer-container {
+  height: 100%;
+}
+
 /* Medium devices (Tablets, between 600px and 992px) */
 @media only screen and (min-width: 600px) {
   .containerToTop {
