--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,9 @@
 @import "./variables.scss";
 
-*,
-*::before,
-*::after {
+html,
+body {
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
 }
 
 body {
